[project]
name = "DROID-SLAM"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
cu130 = ["cu130"]
cu128 = ["cu128"]

[tool.pixi.feature.cu130.system-requirements]
cuda = "13.0"

[tool.pixi.feature.cu128.system-requirements]
cuda = "12.8"

[tool.pixi.pypi-dependencies]
lietorch = { path = "./thirdparty/lietorch" }
torch_scatter= { path = "./thirdparty/pytorch_scatter" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
hatchling = ">=1.28.0,<2"
pytorch = ">=2.10.0,<3"
torchvision = ">=0.25.0,<0.26"
torchaudio = ">=2.10.0,<3"
wheel = ">=0.46.3,<0.47"
tqdm = ">=4.67.3,<5"
evo = ">=1.34.3,<2"
scipy = ">=1.17.0,<2"
open3d = ">=0.19.0,<0.20"
gdown = ">=5.2.1,<6"
tensorboard = ">=2.20.0,<3"
opencv = ">=4.13.0,<5"
pyyaml = ">=6.0.3,<7"
ninja = ">=1.13.2,<2"
pip = ">=26.0.1,<27"
moderngl = ">=5.11.1,<6"
moderngl-window = ">=3.1.1,<4"

[tool.pixi.pypi-options]
no-build-isolation = true

