[project]
name = "droid-slam"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "wheel>=0.46.3,<0.47",
  "tqdm>=4.67.3,<5",
  "evo>=1.34.3,<2",
  "scipy>=1.17.0,<2",
  "open3d>=0.19.0,<0.20",
  "gdown>=5.2.1,<6",
  "tensorboard>=2.20.0,<3",
  "opencv-python>=4.13.0,<5",
  "pyyaml>=6.0.3,<7",
  "lietorch",
  "torch_scatter",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
cu128 = [
  "torch>=2.10.0,<3",
  "torchvision>=0.25.0,<0.26",
  "torchaudio>=2.10.0,<3",
]
cu130 = [
  "torch>=2.10.0,<3",
  "torchvision>=0.25.0,<0.26",
  "torchaudio>=2.10.0,<3",
]

[tool.uv]
conflicts = [[{ extra = "cu128" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
lietorch = { path = "./thirdparty/lietorch" }
torch_scatter = { path = "./thirdparty/pytorch_scatter" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.dependency-metadata]]
name = "torch_scatter"
requires-dist = ["torch"]

[tool.uv.extra-build-dependencies]
droid-slam = [{ requirement = "torch", match-runtime = true }]
lietorch = [{ requirement = "torch", match-runtime = true }]
torch_scatter = [{ requirement = "torch", match-runtime = true }]
